<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteY="81dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="39dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtEjecutivo"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:hint="@string/NoEjecutivo" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="0dp"
            android:layout_height="483dp"
            android:layout_marginStart="39dp"
            android:layout_marginEnd="39dp"
            android:layout_marginBottom="9dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                app:layout_column="0"
                app:layout_row="0"
                app:srcCompat="@mipmap/bill" />

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                app:layout_column="0"
                app:layout_row="1"
                app:srcCompat="@mipmap/book" />

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                app:layout_column="0"
                app:layout_row="2"
                app:srcCompat="@mipmap/money" />

            <ImageButton
                android:id="@+id/imageButton11"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                app:layout_column="0"
                app:layout_row="3"
                app:srcCompat="@mipmap/folder" />

            <ImageButton
                android:id="@+id/imageButton12"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                app:layout_column="0"
                app:layout_row="4"
                app:srcCompat="@mipmap/support" />

            <ImageButton
                android:id="@+id/imageButton13"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                app:layout_column="0"
                app:layout_row="6"
                app:srcCompat="@mipmap/exit" />

            <Button
                android:id="@+id/btnboletas"
                android:layout_width="190dp"
                android:layout_height="67dp"
                android:text="@string/boletas"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_column="2"
                app:layout_row="0" />

            <Button
                android:id="@+id/btnLecturas"
                android:layout_width="190dp"
                android:layout_height="65dp"
                android:text="@string/lecturas"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_column="2"
                app:layout_row="1" />

            <Button
                android:id="@+id/btnCobranza"
                android:layout_width="190dp"
                android:layout_height="66dp"
                android:text="@string/cobranza"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_column="2"
                app:layout_row="2" />

            <Button
                android:id="@+id/btnOficialias"
                android:layout_width="190dp"
                android:layout_height="65dp"
                android:text="@string/oficialias"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_column="2"
                app:layout_row="3" />

            <Button
                android:id="@+id/btnServicio"
                android:layout_width="190dp"
                android:layout_height="63dp"
                android:text="@string/servicio"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_column="2"
                app:layout_row="4" />

            <Button
                android:id="@+id/btnSalir"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="@string/salir"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_column="2"
                app:layout_row="6" />

            <Button
                android:id="@+id/btnCenso"
                android:layout_width="190dp"
                android:layout_height="65dp"
                android:text="@string/censo"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_column="2"
                app:layout_row="5" />

            <ImageButton
                android:id="@+id/imgCenso"
                android:layout_width="90dp"
                android:layout_height="65dp"
                app:layout_column="0"
                app:layout_row="5"
                app:srcCompat="@mipmap/censo" />

        </android.support.v7.widget.GridLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>